# autoreflect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
generator/: main.cpp
sample/: CMakeLists.txt  sample.cpp  test.h  test2.h
